--- a/base-html/exercise.html
+++ b/base-html/exercise.html
@@ -2,18 +2,29 @@
 <html lang="en"> <!-- Specify primary language for the page -->
 <head>
 	<!-- Set a page title in here! -->
-
+<title>Hello World</title>
 </head>
 <body>
 	<!-- Add a top level header -->
+  <div>
+    <h1>My first Heading</h1>
 
-	<!-- Add an image here! https://www.sololearn.com/Icons/Courses/1014.png will do -->
+  <!-- Add an image here! https://www.sololearn.com/Icons/Courses/1014.png will do -->
+    <img src="https://www.sololearn.com/Icons/Courses/1014.png" />
+
+  <!-- Add a second level header -->
+    <h2>Second header</h2>
+
+  <!-- Add some formatted text! You can use <b> or <i> -->
+    <b>Bold</b>
+    <i>Italic</i>
 
 	<!-- Add a second level header -->
-	<!-- Add some formatted text! You can use <b> or <i> -->
+  <h2 id = "purple-header" class = "second-header">Level 2 Header -- 2!</h2>
+  	<div>
 
-	<!-- Add a second level header -->
-	<!-- Add some formatted text! You can use <b> or <i> -->
-
+  <!-- Add some formatted text! You can use <b> or <i> -->
+      <p>Have you <i>ever</i> gone swimming?</p>
+  	</div>
 </body>
 </html>
